added information about template parsing and frontmatter

--- a/README.textile
+++ b/README.textile
@@ -12,6 +12,7 @@ h2. Requirements
 
 * CakePHP 1.3
 * Patience
+* PHP 5.2+ with json_decode or PECL json 1.2+ (For Frontmatter parsing)
 
 h2. Installation
 
@@ -42,6 +43,33 @@ Create a folder in your @app/libs@ folder called @admin@. This folder will conta
 Create a @post_admin.php@ file in your @app/libs/admin@ folder. This will contain your @PostAdmin@ class. "This gist":http://gist.github.com/583603 is an example of such a class.
 
 Once your @post_admin.php@ file has been created, run @cake admin@ from the shell. This will create the respective plugin if not already (in our case, an @admin@ plugin), as well as all the models, views, and controllers for ALL available @*_admin.php@ files. In our case, you can then access the admin section at @example.com/admin/posts@.
+
+h2. Parsing
+
+CakeAdmin constructs templates from a controller-centric approach. Many of the class methods in a @CakeAdmin@ subclass may seem to be related to Views, but in fact are used to describe the Controller and how it should shuffle data between the model and the view. In fact, the parsing order is as follows:
+
+AppController => Controller => AppModel => Model => View
+
+Because CakeAdmin takes a template agnostic approach, it may be useful to tell the @Model@ or @View@ to do something based upon the @Controller@ or @Action@ template's needs. It will not always be possible to complete these tasks, depending upon the templates in use, but CakeAdmin will allow the use of template Frontmatter to define needs for each template.
+
+CakeAdmin Frontmatter is much the same as for "Jekyll":http://github.com/mojombo/jekyll, but is more json-ish for ease of native parsing. All frontmatter is removed from the resulting template, but is passed on as a json_decoded object to future templates. For the moment, only controller actions can have frontmatter, but this is subject to change as needed.
+
+h3. Frontmatter
+
+Frontmatter can be specified in a json-like manner. It is relatively lenient, but commas must be specified to separate key->value pairs. The outermost wrapping @{}@ - curly braces - have been replaced with wrapping @---@ - a sequence of three dashes - as is done for Jekyll templates.
+
+Keys need not be wrapped in quotation marks, but string values MUST be wrapped as such.
+
+Arrays and objects work just as in normal json, except for the outermost braces.
+
+For controllers, Standard keys and their usages are:
+
+* title: Title of the action name
+* description: Description of the action name
+* finders: Finder methods that need to be set for the model
+* related: Related finder methods that need to be set for the model
+
+Using frontmatter is a neat way of specifying extra data that can be used by other templates further on down the compilation step. It can be thought of as a really bad implementation of evented programming.
 
 h2. TODO
 
