--- a/README.textile
+++ b/README.textile
@@ -71,6 +71,114 @@ For controllers, Standard keys and their usages are:
 
 Using frontmatter is a neat way of specifying extra data that can be used by other templates further on down the compilation step. It can be thought of as a really bad implementation of evented programming.
 
+h3. Model Validation Rules
+
+Validation rules are parsed in two steps. The @CakeAdmin@ @__construct()@ method parses each validation rule for a message and a rule. If the message is not found, then a generic message is attached. This avoids the need to edit the model file at a later date.
+
+The default validation rules can be overridden easily. They are defined within the @CakeAdmin@ class. The following is default set:
+
+<pre><code>
+/**
+ * Default Validation Messages
+ *
+ * Messages may contain the string `{{field}}` in order to support
+ * inclusion of fieldnames via str_replace
+ *
+ * Rules that have parameters may include those parameters as {{parameter}}
+ *
+ * When overriding these in sub-classes, remember to either override
+ * in the __construct() method to array_merge with the defaults, or
+ * specify all the messages that may be used
+ *
+ * @var string
+ */
+    var $_validationMessages = array(
+        'alphanumeric'  => '{{field}} must only contain letters and numbers',
+        'between'       => '{{field}} must be between {{min}} and {{max}} characters long',
+        'blank'         => '{{field}} must be blank or contain only whitespace characters',
+        'boolean'       => 'Incorrect value for {{field}}',
+        'cc'            => 'The credit card number you supplied was invalid',
+        'comparison'    => '{{field}} must be {{comparison}} to {{value}}',
+        'date'          => 'Enter a valid date in {{format}} format',
+        'decimal'       => '{{field}} must be a valid decimal number with at least {{length}} decimal points',
+        'email'         => '{{field}} must be a valid email address',
+        'equalTo'       => '{{field}} must be equal to {{number}}',
+        'extension'     => '{{field}} must have a valid extension',
+        'file'          => '{{field}} must be a valid file name',
+        'ip'            => '{{field}} must be a valid IP address',
+        'inlist'        => 'Your selection for {{field}} must be in the given list',
+        'isunique'      => 'This {{field}} has already been taken',
+        'maxlength'     => '{{field}} must have less than {{length}} characters',
+        'minlength'     => '{{field}} must have at least {{length}} characters',
+        'money'         => '{{field}} must be a valid monetary amount',
+        'multiple'      => 'You must select at least {{min}} and no more than {{max}} options for {{field}}',
+        'numeric'       => '{{field}} must be numeric',
+        'notempty'      => '{{field}} cannot be empty',
+        'phone'         => '{{field}} must be a valid phone number',
+        'postal'        => '{{field}} must be a valid postal code',
+        'range'         => '{{field}} must be between {{min}} and {{max}}',
+        'ssn'           => '{{field}} must be a valid social security number',
+        'url'           => '{{field}} must be a valid url',
+    );
+</code></pre>
+
+If you would like to override them within your own admin classes, either include the above in your variable declaration, or override in the @__construct()@ method:
+
+<pre><code>
+    function __construct() {
+        $this->_validationMessages = array_merge(array(
+            'custom' => 'Custom message for {{field}}'),
+            $this->_validationMessages
+        );
+        parent::__construct();
+    }
+</code></pre>
+
+All the default validation rules work as normal, with option parsing and everything. For example, given:
+
+<pre><code>
+    var $validations    = array(
+        'content'   => array(
+            'required'  => 'notempty',
+            'maxLength' => array('maxLength', 255),
+            'inList' => array(
+                'rule' => array('inList', array(true, 'b', null)),
+                'allowEmpty' => true,
+                'on' => 'create',
+                'message' => 'Please be in the good list'
+            )
+        )
+    );
+</code></pre>
+
+@CakeAdmin@ will generate the following @__construct()@ method:
+
+<pre><code>
+    function __construct($id = false, $table = null, $ds = null) {
+        parent::__construct($id, $table, $ds);
+        $this->validate = array(
+            'content' => array(
+                'required' => array(
+                    'rule' => array('notempty'),
+                    'message' => __d('admin', 'Content cannot be empty', true),
+                ),
+                'maxLength' => array(
+                    'rule' => array('maxLength', 255),
+                    'message' => __d('admin', 'Content must have less than 255 characters', true),
+                ),
+                'inList' => array(
+                    'rule' => array('inList', array(true, 'b', null)),
+                    'allowEmpty' => true,
+                    'on' => 'create',
+                    'message' => __d('admin', 'Please be in the good list', true),
+                ),
+            ),
+        );
+    }
+</code></pre>
+
+All validation rules are wrapped in domain-specific internationalization calls - @__d()@ - meaning it is possible to further internationalize your generated admin section without mucking with the included classes.
+
 h2. TODO
 
 * Unit Tests!!!
