--- a/README.textile
+++ b/README.textile
@@ -165,10 +165,11 @@ The following is an example implementation of @mergeVars($configuration)@:
             'ds'    => $admin->useDbConfig
         ));
 
-        $searches = array();
         $filters = array();
+        $search = array();
         $fields = array();
         $order = "{$admin->primaryKey} ASC";
+        $schema = $modelObj->schema();
 
         if (empty($configuration['fields']) || (in_array('*', (array) $configuration['fields']))) {
             // $fields is all fields
@@ -191,18 +192,24 @@ The following is an example implementation of @mergeVars($configuration)@:
             }
         }
 
-        if (!empty($configuration['search'])) {
-            foreach ($configuration['search'] as $filter) {
-                $searches[] = $filter;
-                $filters[] = $filter;
-            }
-        }
         if (!empty($configuration['list_filter'])) {
-            foreach (array_keys($configuration['list_filter']) as $filter) {
-                $filters[] = $filter;
+            foreach ($configuration['list_filter'] as $field => $config) {
+                $filters[$field] = (array) $config;
             }
         }
-        $filters = array_unique($filters);
+
+        $configuration['search'] = Set::normalize($configuration['search']);
+        if (!empty($configuration['search'])) {
+            foreach ($configuration['search'] as $field => $alias) {
+                if (!in_array($field, array_keys($filters))) {
+                    $type = ($schema[$field]['type'] == 'text') ? 'text' : $schema[$field]['type'];
+                    $search[$field] = array(
+                        'type' => ($field === 'id') ? 'text' : $type,
+                        'alias' => empty($alias) ? $field : $alias,
+                    );
+                }
+            }
+        }
 
         $sort = $fields;
         if ($configuration['sort'] == false) {
@@ -212,8 +219,8 @@ The following is an example implementation of @mergeVars($configuration)@:
         }
 
         $configuration = array_merge($this->defaults, $configuration);
-        $configuration['searches'] = $searches;
-        $configuration['filters'] = $filters;
+        $configuration['list_filter'] = $filters;
+        $configuration['search'] = $search;
         $configuration['fields'] = $fields;
         $configuration['order'] = $order;
         $configuration['sort'] = $sort;
